add CI workflow with compile/test/ErrorCode checks and enhance maven-publish with dependency installation and test execution
- Add .github/workflows/ci.yml to run on push/PR: compile all modules in dependency order, run JUnit 5 tests (160 total), ErrorCode dedup checks
- Update maven-publish.yml: rename build job to publish, add CI/test secrets env vars, install code-sql for downstream modules, split compile/test steps, run ErrorCode dedup before deploy
- Add install-local.sh script to install modules to ~/.m2